Add phase-compaction, auto-merge segments & parallel query execution fix.